[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "liman-simulasyonu"
version = "1.0.0"
description = "TIR, gemi ve istif alanı mantığıyla çalışan liman yükleme simülasyonu."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Gürel Bilgin" },
  { name = "Berkay Aras" }
]
keywords = ["python", "simulation", "tkinter", "csv", "port", "logistics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.scripts]
liman-simulasyonu = "liman_simulasyonu.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
